--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <body style='font-family:"Helvetica";background-image:url(http://apod.nasa.gov/apod/image/1406/m16_32block950.jpg);color:white;'>
   <div style='max-width:800px;margin:auto;background-color:rgba(0,0,0,.66);padding-top:10px;'>
   <h1 style='position:relative;left:10%;'>Dear {{name}},</h1>
@@ -38,3 +39,4 @@
   </div>
   </div>
 </body>
+</html>
